--- a/src/App/DataViewPage/index.css
+++ b/src/App/DataViewPage/index.css
@@ -1,25 +1,6 @@
-.event-name {
-  text-align: center;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 5px;
-}
-
-.dates {
-  height: 80px;
-  margin-left: 10px;
-}
-
-.dates div {
-  margin: auto;
-  padding: 0.5em 0.5em 0 0;
-  text-align: left;
-  font-size: 14px;
-}
-
-hr {
-  padding: 0;
-  margin: 10px;
-  color: #bdbdbd;
-  opacity: 0.3;
+.timeline-container {
+  width: 100%;
+  min-width: 400px;
+  height: 700px;
+  min-height: 400px;
 }
